# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  setup.sfg
.github/workflows/: linter-tests-check.yml
gendiff/: .generate_diff.py.swp  __init__.py  compare_data.py  data_parser.py  file_parser.py  file_reader.py  gendiff.py  generate_diff.py
gendiff/data_getter/: file_reader.py
gendiff/formatters/: engine.py  formats.py  formatter.py  json.py  json_formatter.py  keywords.py  plain.py  plain_formatter.py  stylish.py  stylish_formatter.py
gendiff/parser/: data_parser.py
gendiff/scripts/: __init__.py  gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: answer_json_flat  answer_json_nested  answer_plain_nested  answer_stylish_nested  correct_answers.py  file1_nested.yaml  file2_recursive.json
